<resources>
    <string name="app_name">Pokédex</string>
    <string name="welcome">Bienvenido a tu Pokédex!</string>
    <string name="login">Iniciar Sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="sign_up">¿No tienes cuenta? Registrate</string>
    <string name="go">Entrar</string>
    <string name="pokemon_name">Pikachu</string>
    <string name="pokemon_number">#025</string>
    <string name="pokemon_image">Imagen del Pokémon</string>
    <string name="about">About</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="altura_val">0.4m</string>
    <string name="habilidad">Habilidad</string>
    <string name="habilidad_val">6.0Kg</string>
    <string name="habilidad_poke">Elec. Estática</string>
    <string name="pokemon_descripcion">
    Cuando se enfada, descarga energía almacenada en las bolsas de sus mejillas.</string>
    <string name="type_electric">Electric</string>
    <string name="ant_pokemon">Arbok N.°0024</string>
    <string name="sig_pokemon">Raichu N.°0026</string>
</resources>