<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD600"
    tools:context=".Pokedex">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:alpha="0.1"
        android:src="@drawable/pokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="-50dp"/>

    <ImageView
        android:id="@+id/btnFavorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="0dp"
        android:src="@drawable/empty_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/pokemonName"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/pokemonName"
        style="@style/Pokedex.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pikachu"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pokemonNumber"
        style="@style/Pokedex.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_number"
        app:layout_constraintEnd_toEndOf="@id/pokemonName"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="@id/pokemonName"
        app:layout_constraintTop_toBottomOf="@id/pokemonName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/topGuide">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/typeChip"
                style="@style/Pokedex.Tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_electric"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelAltura"
                style="@style/Pokedex.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Altura"
                app:layout_constraintEnd_toStartOf="@+id/valAltura"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeChip" />

            <TextView
                android:id="@+id/valAltura"
                style="@style/Pokedex.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="0,4m"
                app:layout_constraintBaseline_toBaselineOf="@id/labelAltura"
                app:layout_constraintStart_toEndOf="@id/labelAltura" />

            <TextView
                android:id="@+id/labelPeso"
                style="@style/Pokedex.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/peso"
                app:layout_constraintEnd_toStartOf="@+id/valPeso"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelAltura" />

            <TextView
                android:id="@+id/valPeso"
                style="@style/Pokedex.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6,0kg"
                app:layout_constraintBaseline_toBaselineOf="@id/labelPeso"
                app:layout_constraintEnd_toStartOf="@+id/valHabilidad"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/labelPeso" />

            <TextView
                android:id="@+id/labelHabilidad"
                style="@style/Pokedex.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="40dp"
                android:text="Habilidad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeChip" />

            <TextView
                android:id="@+id/valHabilidad"
                style="@style/Pokedex.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/habilidad"
                app:layout_constraintStart_toStartOf="@+id/labelHabilidad"
                app:layout_constraintTop_toBottomOf="@id/labelHabilidad" />

            <TextView
                android:id="@+id/description"
                style="@style/Pokedex.Body"
                android:layout_width="321dp"
                android:layout_height="89dp"
                android:layout_marginTop="24dp"
                android:text="@string/pokemon_descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelPeso" />

            <ImageView
                android:id="@+id/imgArbok"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/arbok"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" />

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back_arrow"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="4dp"
                android:text="Arbok N.º 0024"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBack" />

            <ImageView
                android:id="@+id/imgRaichu"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/raichu"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="4dp"
                android:text="Raichu N.º 0026"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnNext" />

            <ImageView
                android:id="@+id/btnNext"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/forward_arrow"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/pokemonImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pikachu"
        app:layout_constraintBottom_toTopOf="@id/topGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="-40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>